
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_17__ TYPE_5__ ;
typedef struct TYPE_16__ TYPE_4__ ;
typedef struct TYPE_15__ TYPE_3__ ;
typedef struct TYPE_14__ TYPE_2__ ;
typedef struct TYPE_13__ TYPE_1__ ;


typedef int a ;
typedef size_t UINT ;
struct TYPE_17__ {int Rpc; } ;
struct TYPE_16__ {size_t NumItem; TYPE_3__** Items; } ;
struct TYPE_15__ {scalar_t__ Port; int HubName; int AccountName; } ;
struct TYPE_14__ {TYPE_1__* ClientOption; int AccountName; } ;
struct TYPE_13__ {scalar_t__ Port; int HubName; } ;
typedef TYPE_2__ RPC_CLIENT_GET_ACCOUNT ;
typedef TYPE_3__ RPC_CLIENT_ENUM_ACCOUNT_ITEM ;
typedef TYPE_4__ RPC_CLIENT_ENUM_ACCOUNT ;
typedef TYPE_5__ REMOTE_CLIENT ;
typedef int PACK ;


 size_t CcGetAccount (TYPE_5__*,TYPE_2__*) ;
 int CiFreeClientGetAccount (TYPE_2__*) ;
 size_t ERR_INTERNAL_ERROR ;
 size_t ERR_NO_ERROR ;
 int FreePack (int *) ;
 int InRpcClientEnumAccount (TYPE_4__*,int *) ;
 scalar_t__ IsEmptyStr (int ) ;
 int * RpcCall (int ,char*,int *) ;
 size_t RpcGetError (int *) ;
 scalar_t__ RpcIsOk (int *) ;
 int StrCpy (int ,int,int ) ;
 int UniStrCpy (int ,int,int ) ;
 int Zero (TYPE_2__*,int) ;

UINT CcEnumAccount(REMOTE_CLIENT *r, RPC_CLIENT_ENUM_ACCOUNT *e)
{
 PACK *ret;
 UINT err = 0;

 if (r == ((void*)0) || e == ((void*)0))
 {
  return ERR_INTERNAL_ERROR;
 }

 ret = RpcCall(r->Rpc, "EnumAccount", ((void*)0));

 if (RpcIsOk(ret))
 {
  UINT i;
  InRpcClientEnumAccount(e, ret);

  for (i = 0;i < e->NumItem;i++)
  {
   RPC_CLIENT_ENUM_ACCOUNT_ITEM *t = e->Items[i];

   if (IsEmptyStr(t->HubName) && t->Port == 0)
   {
    UINT err2;
    RPC_CLIENT_GET_ACCOUNT a;



    Zero(&a, sizeof(a));
    UniStrCpy(a.AccountName, sizeof(a.AccountName), t->AccountName);
    err2 = CcGetAccount(r, &a);
    if (err2 == ERR_NO_ERROR)
    {
     StrCpy(t->HubName, sizeof(t->HubName), a.ClientOption->HubName);
     t->Port = a.ClientOption->Port;

     CiFreeClientGetAccount(&a);
    }
   }
  }
 }
 else
 {
  err = RpcGetError(ret);
 }

 FreePack(ret);

 return err;
}
